	PR target/26600 	* config/i386/i386.c (legitimate_constant_p) <CONST_DOUBLE>: TImode 	integer constants other than zero are only legitimate on TARGET_64BIT. 	<CONST_VECTOR> Only zero vectors are legitimate. 	(ix86_cannot_force_const_mem): Integral and vector constants can 	always be put in the constant pool.

* gcc.target/i386/pr26600.c: New test case.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@113818 138bc75d-0d04-0410-961f-82ee72b054a4